# learning-project

./: README.md
adk-service/: Dockerfile  pyproject.toml  requirements.txt
adk-service/generate-content/: agent.py  schemas.py  tools.py
backend/: README.md  entrypoint.sh  pyproject.toml
backend/classmatebot/accounts/: apps.py  constants.py  fields.py  managers.py  models.py  utils.py
backend/classmatebot/accounts/api/v1/: serializers.py  urls.py  views.py
backend/classmatebot/accounts/migrations/: 0001_initial.py
backend/classmatebot/chats/: apps.py  tasks.py
backend/classmatebot/chats/api/v1/: serializers.py  urls.py  views.py
backend/classmatebot/chats/commands/: commands.py  helpers.py  registry.py
backend/classmatebot/chats/handlers/: generation.py  lesson.py  quiz.py
backend/classmatebot/chats/receivers/: receivers.py
backend/classmatebot/quizzes/: admin.py  apps.py  models.py  prompts.py  schemas.py
backend/classmatebot/quizzes/api/v1/: serializers.py  urls.py  views.py
backend/classmatebot/quizzes/migrations/: 0001_initial.py
backend/classmatebot/subjects/: admin.py  apps.py  models.py  prompts.py  schemas.py
backend/classmatebot/subjects/api/v1/: serializers.py  urls.py  views.py
backend/classmatebot/subjects/migrations/: 0001_initial.py
backend/config/: admin.py  apps.py  permissions.py  settings.py  urls.py
backend/wrappers/: whatsapp.py
